# vmid

./: Cargo.toml  README.md
src/: data.rs  lib.rs  main.rs  menu.rs  rpc_client.rs  util.rs
src/views/: menu.rs  mod.rs  offers.rs
