[package]
name = "vmid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vmid"
path = "src/main.rs"

[lib]
name = "vmid"
path = "src/lib.rs"

[dependencies]
cursive = "0.16"
rand = "0.8.4"
color-eyre = "0.5.11"
tracing = "0.1.26"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
