[package]
name = "vmid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vmid"
path = "src/main.rs"

[lib]
name = "vmid"
path = "src/lib.rs"

[dependencies]
cursive = "0.16"
cursive_table_view = { git = "https://github.com/luryus/cursive_table_view", rev = "e995f16" }
cursive-aligned-view = "0.5"
rand = "0.8.4"
color-eyre = "0.5.11"
tracing = "0.1.26"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
vrsc-rpc = { path = "../rust-vrsc-rpc/client" }
dirs = "4.0"
os_info = "3.0"